# Zora_Perl

./: .gitignore  CMakeLists.txt  desktop_environment.cpp  desktop_environment.h  python_manager.cpp  python_manager.h  system_checker.cpp  system_checker.h  zora_perl_main.cpp
.github/workflows/: build-test.yml  windows-release.yml
ZoraPerl_Onboarding/: CMakeLists.txt  main.cpp  resources.qrc  setupwizard.cpp  setupwizard.h  softlanding.cpp  softlanding.h
